--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,6 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:import/typescript",
     "prettier",
-    "prettier/react",
     "prettier/@typescript-eslint"
   ],
   "parserOptions": {
@@ -21,11 +20,15 @@
   "settings": {
     "import/resolver": {
       "alias": {
-        "map": [["~", "./app/src"], ["~~", "./server/src"], ["@", "./@types"]],
-        "extensions": [".js", ".jsx", ".ts", ".tsx", ".json"]
+        "map": [
+          ["~", "./app/src"],
+          ["~~", "./server/src"],
+          ["@", "./@types"]
+        ],
+        "extensions": [".js", ".ts", ".tsx", ".json"]
       },
       "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx", ".json"],
+        "extensions": [".js", ".ts", ".tsx", ".json"],
         "moduleDirectory": ["app/src", "server/src", "node_modules"]
       }
     }
@@ -79,13 +82,6 @@
       }
     ],
     "import/prefer-default-export": "off",
-    "react/jsx-filename-extension": ["warn", {"extensions": [".tsx", ".jsx"]}],
-    "react/jsx-uses-react": "warn",
-    "react/jsx-indent": ["warn", 4],
-    "react/jsx-indent-props": ["warn", 4],
-    "react/jsx-props-no-spreading": "off",
-    "react/prop-types": "off",
-    "react/button-has-type": "off",
     "prettier/prettier": "warn"
   },
   "overrides": [
