--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "delay": "2500"
   },
   "dependencies": {
-    "@testing-library/user-event": "^12.7.3",
-    "axios": "0.21.1"
+    "axios": "0.21.1",
+    "express": "4.17.1"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
@@ -58,6 +58,7 @@
     "@babel/preset-env": "7.12.1",
     "@babel/preset-typescript": "7.12.1",
     "@testing-library/jest-dom": "5.11.9",
+    "@testing-library/user-event": "12.7.3",
     "@types/express": "4.17.9",
     "@types/jest": "26.0.20",
     "@types/node": "14.14.31",
@@ -73,9 +74,11 @@
     "eslint-config-prettier": "7.0.0",
     "eslint-import-resolver-alias": "1.1.2",
     "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.3.0",
+    "eslint-plugin-react": "7.22.0",
     "file-loader": "6.2.0",
-    "html-webpack-partials-plugin": "0.8.0",
+    "html-loader": "2.1.1",
     "html-webpack-plugin": "4.5.0",
     "husky": "4.3.6",
     "identity-obj-proxy": "3.0.0",
