--- a/package.json
+++ b/package.json
@@ -70,13 +70,12 @@
     "copy-webpack-plugin": "7.0.0",
     "css-loader": "5.0.0",
     "eslint": "7.15.0",
-    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-prettier": "7.0.0",
     "eslint-import-resolver-alias": "1.1.2",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.3.0",
-    "eslint-plugin-react": "7.22.0",
     "file-loader": "6.2.0",
     "html-loader": "2.1.1",
     "html-webpack-plugin": "4.5.0",
